Added community links and updated templates

--- a/archive/templates/archive/contest_dashboard.html
+++ b/archive/templates/archive/contest_dashboard.html
@@ -23,6 +23,7 @@
                 <a class="nav-link" href="{% url 'problem_list' %}">Archive</a>
                 <a class="nav-link active" href="{% url 'contest_list' %}">Contests</a>
                 <a class="nav-link" href="{% url 'submission_list' %}">Submissions</a>
+                <a class="nav-link" href="{% url 'community' %}">Community</a>
             </div>
         </div>
     </nav>
