--- a/archive/templates/archive/problem_detail.html
+++ b/archive/templates/archive/problem_detail.html
@@ -29,6 +29,7 @@
         <div class="container">
             <a class="navbar-brand" href="{% url 'problem_list' %}">MATHFORCES</a>
             <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="{% url 'community' %}">Community</a>
                 <a class="nav-link" href="{% url 'problem_list' %}">Archive</a>
                 <a class="nav-link" href="{% url 'contest_list' %}">Contests</a>
                 <a class="nav-link" href="{% url 'submission_list' %}">Submissions</a>
