--- a/archive/templates/archive/problem_list.html
+++ b/archive/templates/archive/problem_list.html
@@ -100,6 +100,7 @@
             <a class="navbar-brand" href="{% url 'problem_list' %}">MATHFORCES</a>
             <div class="collapse navbar-collapse">
                 <div class="navbar-nav ms-auto">
+                    <a class="nav-link active" href="{% url 'community' %}">Community</a>
                     <a class="nav-link active" href="{% url 'problem_list' %}">Archive</a>
                     <a class="nav-link" href="{% url 'contest_list' %}">Contests</a>
                     <a class="nav-link" href="{% url 'submission_list' %}">Submissions</a>
