--- a/archive/templates/archive/profile.html
+++ b/archive/templates/archive/profile.html
@@ -24,6 +24,7 @@
             <a class="navbar-brand" href="{% url 'problem_list' %}"><b>MATHFORCES</b></a>
             <div class="collapse navbar-collapse">
                 <div class="navbar-nav ms-auto">
+                    <a class="nav-link" href="{% url 'community' %}">Community</a>
                     <a class="nav-link" href="{% url 'problem_list' %}">Archive</a>
                     <a class="nav-link" href="{% url 'contest_list' %}">Contests</a>
                     <a class="nav-link" href="{% url 'submission_list' %}">Submissions</a>
