--- a/archive/templates/archive/community.html
+++ b/archive/templates/archive/community.html
@@ -20,7 +20,7 @@
             <a class="navbar-brand fw-bold" href="{% url 'problem_list' %}">MATHFORCES</a>
             <div class="navbar-nav ms-auto">
                 <a class="nav-link" href="{% url 'problem_list' %}">Archive</a>
-                <a class="nav-link active" href="{% url 'community_list' %}">Community</a>
+                <a class="nav-link active" href="{% url 'community' %}">Community</a>
                 <a class="nav-link" href="{% url 'contest_list' %}">Contests</a>
             </div>
         </div>
